update some fields on product
