# docs/swagger.json
@@ -606,28 +606,28 @@
         "dtos.ProductCreateRequest": {
             "type": "object",
             "required": [
-                "harga",
-                "nama",
-                "stok"
+                "name",
+                "price",
+                "stock"
             ],
             "properties": {
                 "category_id": {
                     "type": "integer",
                     "example": 1
                 },
-                "harga": {
-                    "type": "integer",
-                    "example": 10000000
-                },
                 "is_active": {
                     "type": "boolean",
                     "example": true
                 },
-                "nama": {
+                "name": {
                     "type": "string",
                     "example": "Laptop"
                 },
-                "stok": {
+                "price": {
+                    "type": "integer",
+                    "example": 10000000
+                },
+                "stock": {
                     "type": "integer",
                     "example": 5
                 }
@@ -640,12 +640,12 @@
                     "type": "integer",
                     "example": 1
                 },
+                "category_name": {
+                    "type": "string",
+                    "example": "Electronic"
+                },
                 "created_at": {
                     "type": "string"
-                },
-                "harga": {
-                    "type": "integer",
-                    "example": 10000000
                 },
                 "id": {
                     "type": "integer",
@@ -655,11 +655,15 @@
                     "type": "boolean",
                     "example": true
                 },
-                "nama": {
+                "name": {
                     "type": "string",
                     "example": "Laptop"
                 },
-                "stok": {
+                "price": {
+                    "type": "integer",
+                    "example": 10000000
+                },
+                "stock": {
                     "type": "integer",
                     "example": 5
                 },
@@ -675,19 +679,19 @@
                     "type": "integer",
                     "example": 1
                 },
-                "harga": {
-                    "type": "integer",
-                    "example": 10000000
-                },
                 "is_active": {
                     "type": "boolean",
                     "example": true
                 },
-                "nama": {
+                "name": {
                     "type": "string",
                     "example": "Laptop"
                 },
-                "stok": {
+                "price": {
+                    "type": "integer",
+                    "example": 10000000
+                },
+                "stock": {
                     "type": "integer",
                     "example": 5
                 }
@@ -705,11 +709,46 @@
                 }
             }
         },
+        "dtos.UpdateProductResponse": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Laptop"
+                },
+                "price": {
+                    "type": "integer",
+                    "example": 10000000
+                },
+                "stock": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.UpdateProductSuccessResponse": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/dtos.ProductResponse"
+                    "$ref": "#/definitions/dtos.UpdateProductResponse"
                 },
                 "message": {
                     "type": "string",
