# dtos/product.go
@@ -4,18 +4,18 @@ import "time"
 
 // ProductCreateRequest represents the request body for creating a product
 type ProductCreateRequest struct {
-	Nama       string `json:"nama" validate:"required" example:"Laptop"`
-	Harga      int    `json:"harga" validate:"required" example:"10000000"`
-	Stok       int    `json:"stok" validate:"required" example:"5"`
+	Name       string `json:"name" validate:"required" example:"Laptop"`
+	Price      int    `json:"price" validate:"required" example:"10000000"`
+	Stock      int    `json:"stock" validate:"required" example:"5"`
 	IsActive   bool   `json:"is_active" example:"true"`
 	CategoryId *int   `json:"category_id" example:"1"`
 }
 
 // ProductUpdateRequest represents the request body for updating a product
 type ProductUpdateRequest struct {
-	Nama       string `json:"nama" example:"Laptop"`
-	Harga      int    `json:"harga" example:"10000000"`
-	Stok       int    `json:"stok" example:"5"`
+	Name       string `json:"name" example:"Laptop"`
+	Price      int    `json:"price" example:"10000000"`
+	Stock      int    `json:"stock" example:"5"`
 	IsActive   bool   `json:"is_active" example:"true"`
 	CategoryId *int   `json:"category_id" example:"1"`
 }
@@ -27,10 +27,22 @@ type ProductUriRequest struct {
 
 // ProductResponse represents the response body for product
 type ProductResponse struct {
+	ID           int       `json:"id" example:"1"`
+	Name         string    `json:"name" example:"Laptop"`
+	CategoryName string    `json:"category_name" example:"Electronic"`
+	Price        int       `json:"price" example:"10000000"`
+	Stock        int       `json:"stock" example:"5"`
+	IsActive     bool      `json:"is_active" example:"true"`
+	CategoryId   *int      `json:"category_id" example:"1"`
+	CreatedAt    time.Time `json:"created_at"`
+	UpdatedAt    time.Time `json:"updated_at"`
+}
+
+type UpdateProductResponse struct {
 	ID         int       `json:"id" example:"1"`
-	Nama       string    `json:"nama" example:"Laptop"`
-	Harga      int       `json:"harga" example:"10000000"`
-	Stok       int       `json:"stok" example:"5"`
+	Name       string    `json:"name" example:"Laptop"`
+	Price      int       `json:"price" example:"10000000"`
+	Stock      int       `json:"stock" example:"5"`
 	IsActive   bool      `json:"is_active" example:"true"`
 	CategoryId *int      `json:"category_id" example:"1"`
 	CreatedAt  time.Time `json:"created_at"`
@@ -58,8 +70,8 @@ type GetProductSuccessResponse struct {
 
 // UpdateProductSuccessResponse represents the success response for update product
 type UpdateProductSuccessResponse struct {
-	Message string          `json:"message" example:"Product updated successfully"`
-	Data    ProductResponse `json:"data"`
+	Message string                `json:"message" example:"Product updated successfully"`
+	Data    UpdateProductResponse `json:"data"`
 }
 
 // DeleteProductSuccessResponse represents the success response for delete product
